# SpacemanDMM

./: .appveyor.yml  .gitignore  .travis.yml  CONFIGURING.md  Cargo.toml  Dockerfile  README.md  appveyor.yml  build.rs  dockerfile  readme.md
crates/: README.md  dependencies.dot
crates/dm-langserver/: Cargo.toml  README.md  build.rs  main.rs  symbol_search.rs  wasm-imports.js
crates/dm-langserver/debugger/: auxtools_bundle.rs  launched.rs
crates/dm-langserver/src/: background.rs  color.rs  completion.rs  document.rs  extras.rs  find_references.rs  jrpc_io.rs  macros.rs  main.rs  symbol_search.rs
crates/dm-langserver/src/debugger/: auxtools.rs  auxtools_bundle.rs  evaluate.rs  extools.rs  extools_bundle.rs  extools_types.rs  launched.rs  mod.rs
crates/dmdoc/: Cargo.toml  README.md  build.rs  main.rs
crates/dmdoc/src/: main.rs  markdown.rs  template.rs
crates/dmdoc/src/template/: mod.rs
crates/dmdoc/template/: dm_index.html  dm_module.html
crates/dmm-tools/: Cargo.toml  minimap.rs
crates/dmm-tools-cli/: Cargo.toml  build.rs  main.rs
crates/dmm-tools-cli/src/: main.rs
crates/dmm-tools/dmm/: read.rs
crates/dmm-tools/examples/: duplicate_icon_states.rs
crates/dmm-tools/render_passes/: icon_smoothing.rs  icon_smoothing_2020.rs  smart_cables.rs
crates/dmm-tools/src/: dmi.rs  dmm.rs  icon_cache.rs  lib.rs  minimap.rs
crates/dmm-tools/src/dmi/: render.rs
crates/dmm-tools/src/dmm/: read.rs  save_tgm.rs
crates/dmm-tools/src/render_passes/: icon_smoothing.rs  icon_smoothing_2020.rs  icon_smoothing_2020_nc.rs  icon_smoothing_2025.rs  mod.rs  random.rs  smart_cables.rs  structures.rs  transit_tube.rs
crates/dmm-tools/tests/: parse_codebase.rs
crates/dreamchecker/: Cargo.toml  README.md  build.rs  main.rs
crates/dreamchecker/src/: lib.rs  main.rs  switch_rand_range.rs  test_helpers.rs  type_expr.rs
crates/dreamchecker/tests/: branch_eval_tests.rs  call_ext_tests.rs  directive_tests.rs  initial_tests.rs  kwargs_tests.rs  local_vars_tests.rs  new_tests.rs  operator_tests.rs  private_tests.rs  proc_tests.rs  pure_tests.rs  sleep_pure_tests.rs  sleep_tests.rs  static_type_tests.rs  switch_rand_range_tests.rs  turf_iteration_tests.rs  var_declare_tests.rs
crates/dreammaker/: Cargo.toml  README.md  ast.rs  lib.rs
crates/dreammaker/examples/: count-vars.rs  flags.rs  lint.rs
crates/dreammaker/src/: annotation.rs  ast.rs  builtins.rs  config.rs  constants.rs  dmi.rs  docs.rs  error.rs  indents.rs  intern.rs  lexer.rs  lib.rs  objtree.rs  parser.rs  preprocessor.rs  syntax_tree.rs
crates/dreammaker/tests/: annotation_tests.rs  ast_tests.rs  builtins_tests.rs  constants_tests.rs  expression_tests.rs  format_tests.rs  lexer_tests.rs  location_tests.rs  macro_tests.rs  pipeline_tests.rs  reparse_tests.rs
crates/interval-tree/: Cargo.toml  README.md  node.rs
crates/interval-tree/src/: iterators.rs  lib.rs  node.rs  tests.rs  tree.rs
crates/spaceman-dmm/: Cargo.toml  README.md  build.rs  dmi.rs  support.rs
crates/spaceman-dmm/shaders/: main_150.glslf
crates/spaceman-dmm/src/: config.rs  dmi.rs  edit_prefab.rs  editor.rs  history.rs  main.rs  map_renderer.rs  map_repr.rs  support.rs  tasks.rs
crates/spaceman-dmm/src/tools/: mod.rs  place.rs
crates/spaceman-dmm/tools/: mod.rs
dreammaker/: Cargo.toml  ast.rs  builtins.rs  constants.rs  indents.rs  lexer.rs  lib.rs  objtree.rs  parser.rs
scripts/: build-langserver-release.sh  build-suite-release.sh  download-auxtools.sh  download-extools.sh  prepare-binaries.sh  update-auxtools.sh  wasm.sh
src/: README.md  dependencies.dot  dmi.rs  dmm.rs  main.rs  minimap.rs  objtree.rs  utils.rs
src/cli/: Cargo.toml  README.md  build.rs  main.rs
src/dmdoc/: Cargo.toml  README.md  main.rs  markdown.rs
src/dmdoc/template/: base.html  dm_index.html  dm_module.html  dm_type.html  dmdoc.css  dmdoc.js  git.png.LICENSE  macros.html  mod.rs
src/dreamchecker/: Cargo.toml  README.md  lib.rs  main.rs  test_helpers.rs  type_expr.rs
src/dreamchecker/tests/: branch_eval_tests.rs  directive_tests.rs  kwargs_tests.rs  new_tests.rs  operator_tests.rs  private_tests.rs  proc_tests.rs  sleep_pure_tests.rs  static_type_tests.rs  unit_tests.rs  var_declare_tests.rs
src/dreamcompiler/: Cargo.toml  bytecode.rs  lib.rs  main.rs
src/dreammaker/: Cargo.toml  annotation.rs  ast.rs  builtins.rs  config.rs  configREADME.md  constants.rs  dmi.rs  docs.rs  error.rs  indents.rs  lexer.rs  lib.rs  objtree.rs  parser.rs  preprocessor.rs
src/dreammaker/examples/: count-vars.rs  flags.rs  lint.rs
src/dreammaker/tests/: annotation_tests.rs  ast_tests.rs  builtins_tests.rs  constants_tests.rs  expression_tests.rs  format_tests.rs  lexer_tests.rs  location_tests.rs  macro_tests.rs  pipeline_tests.rs
src/editor/: Cargo.toml  build.rs  config.rs  dmi.rs  edit_prefab.rs  history.rs  main.rs  map_renderer.rs  map_repr.rs  support.rs  tasks.rs
src/editor/res/: license.txt
src/editor/shaders/: main_150.glslf  main_150.glslv
src/editor/tools/: mod.rs  place.rs
src/editor2/: Cargo.toml  build.rs  editor.rc  gasmask.raw  main.rs  map_renderer.rs  support.rs
src/editor2/shaders/: main_150.glslf
src/interval-tree/: Cargo.toml  iterators.rs  lib.rs  node.rs  range.rs  tests.rs  tree.rs
src/langserver/: Cargo.toml  README.md  build.rs  color.rs  completion.rs  document.rs  extras.rs  find_references.rs  io.rs  jrpc_io.rs  macros.rs  main.rs  symbol_search.rs
src/langserver/debugger/: auxtools.rs  auxtools_types.rs  dap_types.rs  evaluate.rs  extools.rs  extools_bundle.rs  extools_types.rs  launched.rs  local_names.rs  mod.rs  types.rs
src/langserver/io/: mod.rs  stdio.rs  wasm.rs
src/qt-extras/: Cargo.toml  build.rs  future.rs  glium_widget.rs  lib.rs
src/tools/: Cargo.toml  README.md  dmi.rs  dmm.rs  icon_cache.rs  lib.rs  lint.rs  main.rs  minimap.rs  utils.rs
src/tools/dmm/: read.rs  save_tgm.rs
src/tools/examples/: duplicate_icon_states.rs
src/tools/render_passes/: icon_smoothing.rs  icon_smoothing_2020.rs  mod.rs  random.rs  smart_cables.rs  structures.rs  transit_tube.rs
src/tools/tests/: parse_codebase.rs
(+20 files in other folders)
