[workspace]
members = [
    "crates/dreammaker-proc-macros",
    "crates/dap-types",
    "crates/dm-langserver",
    "crates/dmdoc",
    "crates/dmm-tools",
    "crates/dmm-tools-cli",
    "crates/dreamchecker",
    "crates/dreammaker",
    "crates/interval-tree",
    #"crates/spaceman-dmm",
]

[profile.release]
lto = true
codegen-units = 1
