[workspace]
members = [
    "crates/builtins-proc-macro",
    "crates/dap-types",
    "crates/dm-langserver",
    "crates/dmdoc",
    "crates/dmm-tools",
    "crates/dmm-tools-cli",
    "crates/dreamchecker",
    "crates/dreammaker",
    "crates/interval-tree",
    #"crates/spaceman-dmm",
]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
