[package]
name = "dm-langserver"
version = "1.5.1"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[dependencies]
url = "2.3.1"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
bincode = "1.3.3"
jsonrpc-core = "18.0.0"
lsp-types = "0.93.1"
dap-types = { path = "../dap-types" }
dreammaker = { path = "../dreammaker" }
dreamchecker = { path = "../dreamchecker" }
interval-tree = { path = "../interval-tree" }
libc = "0.2.132"
guard = "0.5.1"
regex = "1.6.0"
lazy_static = "1.4"
ahash = "0.8.0"

[build-dependencies]
chrono = "0.4.22"
git2 = { version = "0.15.0", default-features = false }
