[package]
name = "dmdoc"
version = "1.9.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
homepage = "https://github.com/SpaceManiac/SpacemanDMM/blob/master/crates/dmdoc/README.md"
edition = "2021"

[dependencies]
dreammaker = { path = "../dreammaker" }
pulldown-cmark = "0.9.2"
walkdir = "2.3.2"
git2 = { version = "0.19.0", default-features = false }
maud = "0.25.0"

[dev-dependencies]
walkdir = "2.3.2"

[build-dependencies]
chrono = "0.4.22"
git2 = { version = "0.19.0", default-features = false }
