[package]
name = "dmdoc"
version = "1.11.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
homepage = "https://github.com/SpaceManiac/SpacemanDMM/blob/master/crates/dmdoc/README.md"
edition = "2021"

[dependencies]
dreammaker = { path = "../dreammaker" }
pulldown-cmark = "0.9.6"
walkdir = "2.5.0"
git2 = { version = "0.20.2", default-features = false }
maud = "0.27.0"
foldhash = "0.2.0"

[dev-dependencies]
walkdir = "2.5.0"

[build-dependencies]
chrono = "0.4.38"
git2 = { version = "0.20.2", default-features = false }
