[package]
name = "dmm-tools-cli"
version = "1.9.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "BYOND map rendering and analysis tools powered by SpacemanDMM"
edition = "2021"

[[bin]]
name = "dmm-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
rayon = "1.10.0"
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../dmm-tools", features = ["png"] }
foldhash = "0.1.3"

[build-dependencies]
chrono = "0.4.38"
git2 = { version = "0.19.0", default-features = false }
