[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[dependencies]
inflate = "0.4.5"
ndarray = "0.15.4"
rand = "0.8.5"
dreammaker = { path = "../dreammaker" }
lodepng = "3.6.1"
indexmap = "1.8.1"
ahash = "0.7.6"

[dependencies.bytemuck]
version = "1.9.1"
features = ["derive"]

[dependencies.bumpalo]
version = "3.9.1"
features = ["collections"]

[dependencies.png]
version = "0.17.5"
optional = true

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dev-dependencies]
walkdir = "2.3.2"
