[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[dependencies]
inflate = "0.4.5"
ndarray = "0.15.6"
rand = "0.8.5"
dreammaker = { path = "../dreammaker" }
lodepng = "3.7.0"
indexmap = "1.9.1"
ahash = "0.8.0"
either = "1.8.0"

[dependencies.bytemuck]
version = "1.12.1"
features = ["derive"]

[dependencies.bumpalo]
version = "3.11.0"
features = ["collections"]

[dependencies.png]
version = "0.17.6"
optional = true

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dependencies.gif]
version = "0.11.4"
optional = true

[dev-dependencies]
walkdir = "2.3.2"
