[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
inflate = "0.4.5"
ndarray = "0.15.6"
rand = "0.8.5"
dreammaker = { path = "../dreammaker" }
lodepng = "3.10.7"
indexmap = "2.6.0"
foldhash = "0.2.0"
either = "1.13.0"

[dependencies.bytemuck]
version = "1.19.0"
features = ["derive"]

[dependencies.bumpalo]
version = "3.16.0"
features = ["collections"]

[dependencies.png]
version = "0.17.14"
optional = true

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dependencies.gif]
version = "0.11.4"
optional = true

[dev-dependencies]
walkdir = "2.5.0"
