[package]
name = "dreamchecker"
version = "1.7.3"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[dependencies]
dreammaker = { path = "../dreammaker" }
guard = "0.5.1"
serde_json = "1.0"
ahash = "0.8.0"

[build-dependencies]
chrono = "0.4.22"
git2 = { version = "0.16.1", default-features = false }
