[package]
name = "dreamchecker"
version = "1.11.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
dreammaker = { path = "../dreammaker" }
serde_json = "1.0"
foldhash = "0.2.0"

[build-dependencies]
chrono = "0.4.38"
git2 = { version = "0.20.2", default-features = false }
