[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
lodepng = "3.6.1"
bitflags = "1.3.2"
termcolor = "1.1.3"
ordered-float = "2.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
toml = "0.5.9"
guard = "0.5.1"
phf = { version = "0.10.1", features = ["macros"] }
color_space = "0.5.3"
ahash = "0.7.6"
indexmap = "1.8.1"

[dev-dependencies]
walkdir = "2.3.2"
