[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
lodepng = "3.7.0"
bitflags = "1.3.2"
termcolor = "1.1.3"
ordered-float = "3.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
toml = "0.5.9"
guard = "0.5.1"
phf = { version = "0.11.1", features = ["macros"] }
color_space = "0.5.3"
ahash = "0.8.0"
indexmap = "1.9.1"
derivative = "2.2.0"
get-size = "0.1.4"
get-size-derive = "0.1.3"

[dev-dependencies]
walkdir = "2.3.2"
