[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
lodepng = "3.10.7"
bitflags = "1.3.2"
termcolor = "1.4.1"
ordered-float = "3.9.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_derive = "1.0.213"
toml = "0.5.11"
phf = { version = "0.11.2", features = ["macros"] }
color_space = "0.5.4"
foldhash = "0.2.0"
indexmap = "2.6.0"
derivative = "2.2.0"
get-size = "0.1.4"
get-size-derive = "0.1.3"

[dev-dependencies]
walkdir = "2.5.0"
