[package]
name = "interval-tree"
version = "0.8.0"
authors = ["coco <coco@hexgolems.com>", "Tad Hardesty <tad@platymuus.com>"]
description = "A simple Interval Tree implementation"
repository = "https://github.com/SpaceManiac/SpacemanDMM/tree/master/crates/interval-tree"
keywords = ["datastructure", "interval", "tree", "map"]
license-file = "LICENSE"
edition = "2021"

[dev-dependencies]
rand = "0.8.5"
