[package]
name = "spaceman-dmm"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../tools", features = ["gfx_core"] }
glutin = "0.28.0"
gfx_gl = "0.6.1"
gfx = "0.18"
gfx_core = "0.9.2"
gfx_window_glutin = "0.31.0"
gfx_device_gl = "0.16.2"
imgui = "0.8.2"
imgui-gfx-renderer = "0.8.2"
lodepng = "3.0.0"
ndarray = "0.15.4"
divrem = "1.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.5.9"
petgraph = { version = "0.6.0", default-features = false }
weak-table = "0.3.2"
slice-of-array = "0.3.2"

[dependencies.nfd]
git = "https://github.com/SpaceManiac/nfd-rs"
branch = "zenity"

[build-dependencies]
chrono = "0.4.19"
git2 = { version = "0.14.2", default-features = false }
