[package]
name = "spaceman-dmm"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../dmm-tools", features = ["gfx_core"] }
imgui = { version = "0.12.0", features = ["docking"] }
imgui-sdl3 = "0.5.0"
lodepng = "3.10.7"
ndarray = "0.15.6"
divrem = "1.0.0"
sdl3 = "0.16.4"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.5.11"
petgraph = { version = "0.6.0", default-features = false }
weak-table = "0.3.2"
slice-of-array = "0.3.2"
sdl3-main = "0.5.4"
ouroboros = "0.18.5"

[build-dependencies]
chrono = "0.4.38"
git2 = { version = "0.20.2", default-features = false }
