[package]
name = "cli"
version = "1.3.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "BYOND map rendering and analysis tools powered by SpacemanDMM"
edition = "2018"

[[bin]]
name = "dmm-tools"
path = "main.rs"

[dependencies]
structopt = "0.3.3"
structopt-derive = "0.4.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
rayon = "1.0.0"
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../tools", features = ["png"] }

[build-dependencies]
chrono = "0.4.0"
git2 = { version = "0.13", default-features = false }
