[package]
name = "dmdoc"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[[bin]]
name = "dmdoc"
path = "main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
pulldown-cmark = "0.2.0"
tera = "0.11.12"
serde = "1.0.71"
serde_derive = "1.0.27"
walkdir = "2.2.0"
git2 = { version = "0.8", default-features = false }

[dev-dependencies]
walkdir = "2.0.1"
