[package]
name = "dreamchecker"
version = "1.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[lib]
name = "dreamchecker"
path = "lib.rs"

[[bin]]
name = "dreamchecker"
path = "main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }

[build-dependencies]
chrono = "0.4.0"
git2 = { version = "0.10", default-features = false }
