[package]
name = "dreamchecker"
version = "1.6.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[lib]
name = "dreamchecker"
path = "lib.rs"

[[bin]]
name = "dreamchecker"
path = "main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
guard = "0.5.0"
serde_json = "1.0"

[build-dependencies]
chrono = "0.4.0"
git2 = { version = "0.13", default-features = false }
