[package]
name = "dreamcompiler"
version = "0.1.0"
authors = ["Joe Schmoe <michal.sul@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dreammaker = { path = "../dreammaker" }
serde = "1.0.27"
serde_json = "1.0.10"
serde_derive = "1.0.27"
windows-named-pipe = "0.1.0"

[lib]
name = "dreamcompiler"
path = "lib.rs"

[[bin]]
name = "dreamcompiler"
path = "main.rs"