[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
lodepng = "3.1.0"
bitflags = "1.0.3"
termcolor = "1.0.4"
ordered-float = "2.0.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_derive = "1.0.103"
toml = "0.5.5"
guard = "0.5.0"
phf = { version = "0.8.0", features = ["macros"] }

[dependencies.linked-hash-map]
git = "https://github.com/SpaceManiac/linked-hash-map"
branch = "get-key-value"

[dev-dependencies]
walkdir = "2.0.1"
