[package]
name = "spaceman-dmm"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[[bin]]
name = "editor"
path = "main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../tools" }
glutin = "0.18.0"
gfx = "0.17.1"
gfx_window_glutin = "0.26.0"
gfx_device_gl = "0.15.3"
imgui = "0.0.20"
imgui-gfx-renderer = "0.0.20"
lodepng = "2.1.5"
ndarray = "0.11.1"
nfd = "0.0.4"
divrem = "0.1.0"
serde = "1.0.76"
serde_derive = "1.0.76"
toml = "0.4.6"
