[package]
name = "spaceman-dmm"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[[bin]]
name = "editor"
path = "main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../tools" }
glutin = "0.18.0"
gfx_gl = "0.5.0"
gfx = "0.17.1"
gfx_window_glutin = "0.26.0"
gfx_device_gl = "0.15.3"
imgui = "0.0.21"
imgui-gfx-renderer = "0.0.21"
lodepng = "2.1.5"
ndarray = "0.12.1"
divrem = "0.1.0"
serde = "1.0.76"
serde_derive = "1.0.76"
toml = "0.4.6"
petgraph = { version = "0.4.9", default-features = false }
weak-table = "0.2.3"
slice-of-array = "0.2.0"

[dependencies.nfd]
git = "https://github.com/SpaceManiac/nfd-rs"
branch = "zenity"
