[package]
name = "spaceman-dmm"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[[bin]]
name = "editor"
path = "main.rs"

[dependencies]
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../tools" }
glutin = "0.21.1"
gfx_gl = "0.5.0"
gfx = "0.18"
gfx_core = "0.9.2"
gfx_window_glutin = "0.31.0"
gfx_device_gl = "0.16.2"
imgui = "0.2.1"
imgui-gfx-renderer = "0.2.0"
lodepng = "2.1.5"
ndarray = "0.13.0"
divrem = "0.1.0"
serde = "1.0.76"
serde_derive = "1.0.76"
toml = "0.5.5"
petgraph = { version = "0.4.9", default-features = false }
weak-table = "0.2.3"
slice-of-array = "0.2.0"

[dependencies.nfd]
git = "https://github.com/SpaceManiac/nfd-rs"
branch = "zenity"

[build-dependencies]
chrono = "0.4.0"
git2 = { version = "0.10", default-features = false }
