[package]
name = "interval-tree"
version = "0.8.0"
authors = ["coco <coco@hexgolems.com>", "Tad Hardesty <tad@platymuus.com>"]
description = "A simple Interval Tree implementation"
repository = "https://github.com/SpaceManiac/SpacemanDMM/tree/master/src/interval_tree"
keywords = ["datastructure", "interval", "tree", "map"]
license-file = "LICENSE"

[lib]
path = "lib.rs"

[dev-dependencies]
time = "0.1.*"
rand = "0.7.0"
