[package]
name = "interval-tree"
version = "0.8.0"
authors = ["coco <coco@hexgolems.com>", "Tad Hardesty <tad@platymuus.com>"]
description = "A simple Interval Tree implementation"
repository = "https://github.com/SpaceManiac/SpacemanDMM/tree/master/src/interval_tree"
keywords = ["datastructure", "interval", "tree", "map"]
license-file = "LICENSE"
edition = "2018"

[lib]
path = "lib.rs"

[dev-dependencies]
rand = "0.7.0"
