[package]
name = "dm-langserver"
version = "1.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[[bin]]
name = "dm-langserver"
path = "main.rs"

[dependencies]
url = "2.1.0"
serde = "1.0.27"
serde_json = "1.0.10"
serde_derive = "1.0.27"
jsonrpc-core = "14.0.3"
lsp-types = "0.61.0"
dreammaker = { path = "../dreammaker" }
dreamchecker = { path = "../dreamchecker" }
interval-tree = { path = "../interval-tree" }
petgraph = { version = "0.4.9", default-features = false }
libc = "0.2.65"

[build-dependencies]
chrono = "0.4.0"
git2 = { version = "0.10", default-features = false }
