[package]
name = "dm-langserver"
version = "1.4.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[[bin]]
name = "dm-langserver"
path = "main.rs"

[dependencies]
url = "2.1.0"
serde = "1.0.27"
serde_json = "1.0.10"
serde_derive = "1.0.27"
jsonrpc-core = "14.0.3"
lsp-types = "0.80.0"
dreammaker = { path = "../dreammaker" }
dreamchecker = { path = "../dreamchecker" }
interval-tree = { path = "../interval-tree" }
libc = "0.2.65"
guard = "0.5.0"
regex = "1.3"
lazy_static = "1.4"

[build-dependencies]
chrono = "0.4.0"
git2 = { version = "0.13", default-features = false }
