[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
inflate = "0.4.1"
ndarray = "0.13.0"
rand = "0.7.0"
linked-hash-map = "0.5.0"
dreammaker = { path = "../dreammaker" }
lodepng = "2.1.5"
bumpalo = "2.6.0"

[dependencies.png]
version = "0.15.0"
optional = true

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dev-dependencies]
walkdir = "2.0.1"
