[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
inflate = "0.4.1"
ndarray = "0.13.0"
rand = "0.7.0"
dreammaker = { path = "../dreammaker" }
lodepng = "3.0.0"
indexmap = "1.7.0"
ahash = "0.7.6"

[dependencies.bytemuck]
version = "1.5"
features = ["derive"]

[dependencies.bumpalo]
version = "3.0.0"
features = ["collections"]

[dependencies.png]
version = "0.16.0"
optional = true

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dev-dependencies]
walkdir = "2.0.1"
